--- a/app.json
+++ b/app.json
@@ -97,7 +97,7 @@
     
     "desc": "Your Name",
     "required": false,
-    "value": "NEXUS-AI"
+    "value": "Mr Pkdriller"
   },
     "NUMERO_OWNER":
   {
